# render_publish

./: -- SQLite.sql  README.md  build.sh  db.sqlite3  pyproject.toml
main/: settings.py  urls.py
summaryapp/: admin.py  forms.py  urls.py  views.py
summaryapp/migrations/: 0001_initial.py  0002_alter_assingmentmodel_tip.py  0003_servicemodel_time_remove_assingmentmodel_service_and_more.py  0004_remove_servicemodel_description.py  0005_barbermodel_alter_assingmentmodel_employee.py  0006_remove_barbermodel_age.py
summaryapp/models/: __init__.py  assignment.py  barber.py  service.py
summaryapp/static/css/: style.css
summaryapp/static/js/: main.js  myscripts.js
summaryapp/templates/dashboard/: barbers.html  home.html  reception.html  services.html  sidebar.html  transactions.html
summaryapp/templates/registration/: login.html
summaryapp/templates/summaryapp/: base.html  home.html
summaryapp/templatetags/: tags.py
