[tool.poetry]
name = "render"
version = "0.1.0"
description = ""
authors = ["Mutalib Gozalov <mg@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "3.2"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
